--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  box-sizing: border-box;
+
+  color: white;
+
+
+}
+
+html{
+  background-color: #00061a;
+  font-size: 20px;
+}
+
+/* html, body {
+   height: 100%;
+} */
+body {
+   margin-top: 40px;
+   margin-left: 20px;
+   font-family: 'Segoe UI', Roboto, "Helvetica Neue", sans-serif;
+}
