pulizia servizio, eliminazione tutti gli eventi. Modifica logica di chiamata (è la result view che fa direttamente la chiamata), e definizione del detail component come figlio del result view component ed eliminazione di fatto del routing, con snellimento del processo.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>GifFinder</h1>
-<h4>powered by GIPHY</h4>
+<h4>powered by GIPHY & Gionata851</h4>
 
 
-<router-outlet></router-outlet>
-<!-- <app-searchbar></app-searchbar> -->
+<!-- <router-outlet></router-outlet> -->
+<app-searchbar></app-searchbar>
