--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -2,9 +2,9 @@
 <nav>
   <span>search: </span>
   <input type="text" [(ngModel)]="searchKeyword">
-  <button mat-button (click)="launchSearch()"> Go! </button>
-  <button mat-button *ngIf="gifs !== undefined" (click)="orderByUplTime()"> sort by date </button>
-  <button mat-button (click)="getFavorites()"> favorites </button>
+  <button mat-button (click)="launchSearchEvent()"> Go! </button>
+  <!-- <button mat-button *ngIf="gifs !== undefined"> sort by date </button> -->
+  <!-- <button mat-button (click)="getFavorites()"> favorites </button> -->
 
 </nav>
-<app-results-view [gifs]="gifs"></app-results-view>
+<app-results-view [riceviSegnaleLancio]="emettiSegnaleLancio" [searchKeyword]="searchKeyword"></app-results-view>
